@@ -3,6 +3,10 @@ source "http://gems.moovweb.org"
 
 gemspec
 
+group :test do
+  gem 'diff-lcs', '~> 1.1.2'
+end
+
 #group :benchmark do
 #  gem 'rainbow'
 #  gem 'erubis'
